Working cart with sessions

--- a/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@using Microsoft.AspNetCore.Http;
+@{ 
+    var basketCount = HttpContextAccessor.HttpContext.Session.GetInt32("BasketCount");
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,9 +18,10 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE="/>
+              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/font-awesome/css/all.min.css" />
 </head>
 <body>
     <header>
@@ -26,15 +32,33 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="float-left navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="/CollectionPage/Index?categoryId=9b1e699e-3007-4555-a5ff-599ceb6935fc">Game Consoles</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="/CollectionPage/Index?categoryId=0b99efb8-1308-4206-9a5c-f6c03b190a10">Outdoors</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="/CollectionPage/Index">View All</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="container">
+                            <button type="button" class="btn btn-default btn-sm">
+                                <span class="fa fa-shopping-basket"></span> Shopping Cart
+                            </button>
+                            <span class="badge badge-pill badge-info badge-notify">@basketCount.ToString()</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -48,7 +72,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - RetailWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - RetailSite
         </div>
     </footer>
 
