--- a/RetailWebsite/RetailWebsite/wwwroot/css/site.css
+++ b/RetailWebsite/RetailWebsite/wwwroot/css/site.css
@@ -54,3 +54,9 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.badge-notify {
+    position: relative;
+    top: -40px;
+    left: 115px;
+}
