--- a/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
@@ -53,8 +53,8 @@
                     </div>
                     <div class="col-2">
                         <div class="container">
-                            <button type="button" class="btn btn-default btn-sm">
-                                <span class="fa fa-shopping-basket"></span> Shopping Cart
+                            <button type="button" onclick="window.location.href='/Checkout/Index'" class="btn btn-default btn-sm">
+                                <span class="fa fa-shopping-basket" ></span> Shopping Cart
                             </button>
                             <span class="badge badge-pill badge-info badge-notify">@basketCount.ToString()</span>
                         </div>
