Initial work for parts ordering

--- a/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-8">
                         <div class="float-left navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item">
@@ -49,6 +49,13 @@
                                     <a class="nav-link text-dark" href="/CollectionPage/Index">View All</a>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="container">
+                            <button type="button" onclick="window.location.href='/Parts/Index'" class="btn btn-default btn-sm">
+                                <span class="fa fa-truck-moving"></span> Order Tracking
+                            </button>
                         </div>
                     </div>
                     <div class="col-2">
