--- a/RetailWebsite/RetailWebsite/Views/CollectionPage/Index.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/CollectionPage/Index.cshtml
@@ -11,6 +11,9 @@
                 <img class="card-img-top" src="@product.MainImage" alt="Picture">
                 <div class="card-body">
                     <h5 class="card-title">@product.ProductName</h5>
+                    <br />
+                    <br />
+                    <h4>Price: £@product.Price</h4>
                 </div>
             </div>
         }
