--- a/RetailWebsite/RetailWebsite/Views/CollectionPage/Index.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/CollectionPage/Index.cshtml
@@ -3,19 +3,70 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <div class="card-group">
-        @foreach (var product in Model.Products)
-        {
-            <div class="card" style="width: 18rem;" onclick="window.location.href = '/buypage/index/@product.ProductId'">
-                <img class="card-img-top" src="@product.MainImage" alt="Picture">
-                <div class="card-body">
-                    <h5 class="card-title">@product.ProductName</h5>
-                    <br />
-                    <br />
-                    <h4>Price: £@product.Price</h4>
-                </div>
+<div class="container">
+
+    <div class="row">
+        <div class="col-lg-3">
+            <h2>Filters</h2>
+            <div class="list-group">
+                <a href="#" class="list-group-item">Just Temp...</a>
             </div>
-        }
+        </div>
+
+        <div class="col-lg-9">
+
+            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <div class="row">
+                @foreach (var product in Model.Products)
+                {
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <a href="@Url.Action("Index","BuyPage", new { ProductId = product.ProductId})"><img class="card-img-top" src="@product.MainImage" alt=""></a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="@Url.Action("Index","BuyPage", new { ProductId = product.ProductId})">@product.ProductName</a>
+                                </h4>
+                                <h5>£@product.Price</h5>
+                                <p class="card-text">@product.ProductDescription</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                            </div>
+                        </div>
+                    </div>
+                }
+
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.col-lg-9 -->
     </div>
+    <!-- /.row -->
 </div>
+<!-- /.container -->
