--- a/RetailWebsite/RetailWebsite/Views/Home/Index.cshtml
+++ b/RetailWebsite/RetailWebsite/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                        <a href="CollectionPage/Index?categoryId=0b99efb8-1308-4206-9a5c-f6c03b190a10"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="CollectionPage/Index?categoryId=0b99efb8-1308-4206-9a5c-f6c03b190a10">Outdoors</a>
